Fix i letter weight, spacing, Safari font declaration

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -39,7 +39,6 @@
   font-family: EBGaramond;
   src: local(EBGaramond-Italic),
   url(../assets/fonts/EB_Garamond/EBGaramond-Italic-VariableFont_wght.ttf) format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
+  font-weight: normal;
+  font-style: italic;
 }
