--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -95,6 +95,7 @@ a {
   letter-spacing: 1.08px;
   font-size: 1.1em;
   line-height: 1;
+  padding-right: .05em;
 }
 
 .text-link {
